fix button not showing on mobile

--- a/main.css
+++ b/main.css
@@ -63,9 +63,14 @@ header {
       width: 40px;
     }
 
-    & svg {
-      width: 100%;
-      height: 100%;
+    .theme-toggle-btn {
+      width: 30px;
+      height: auto;
+
+      & svg {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
